--- a/.github/workflows/swift-code-coverage.yml
+++ b/.github/workflows/swift-code-coverage.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main, next ]
+    branches: [ main ]
 jobs:
   test-code-coverage:
     runs-on: [ubuntu-22.04]
@@ -22,9 +22,6 @@ jobs:
 
     - name: Swift version
       run: swift --version
-
-    - name: Start consul
-      uses: ./.github/actions/consul-start
 
     - name: Run tests
       continue-on-error: true
