--- a/.github/workflows/swift-macos-build.yml
+++ b/.github/workflows/swift-macos-build.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main, next ]
-  
+    branches: [ main ]
+
 jobs:
   build-macos:
     timeout-minutes: 60
@@ -17,8 +17,6 @@ jobs:
 #        swift: [ "5.10", "6.0" ]
 
     runs-on: ${{ matrix.os }}
-#    env:
-#      DEVELOPER_DIR: /Applications/Xcode_16.1.app/Contents/Developer
 
     steps:
     - uses: swift-actions/setup-swift@v2
@@ -35,24 +33,21 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - name: Start consul
-      uses: ./.github/actions/consul-start
-
     - name: GH auth
       run: |
         echo "machine api.github.com login ${{ secrets.GITHUB_TOKEN }} password x-oauth-basic" > $HOME/.netrc
         cat ~/.netrc
+
     - name: Swift version
       run: swift --version
+
     - name: Build
       run: swift build
+
     - name: Run tests
       run: |
-        if [ -d Tests ]; then
-          swift test --parallel
-        fi
+        [ -d Tests ] && swift test --parallel
+
     - name: Run tests (release)
       run: |
-        if [ -d Tests ]; then
-          swift test -c release --parallel
-        fi
+        [ -d Tests ] && swift test -c release --parallel
