--- a/.github/workflows/swift-sanitizer-thread.yml
+++ b/.github/workflows/swift-sanitizer-thread.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main, next ]
+    branches: [ main ]
 
 jobs:
   thread-sanitizer:
@@ -32,9 +32,6 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - name: Start consul
-      uses: ./.github/actions/consul-start
-
     - name: Swift version
       run: swift --version
 
@@ -44,9 +41,9 @@ jobs:
 
     - name: Run thread sanitizer
       run: swift test --sanitize=thread
-      
+
     - name: Clean before release build sanitizier
       run: swift package clean
-      
+
     - name: Run thread sanitizer on release build
       run: swift test --sanitize=thread -c release -Xswiftc -enable-testing
