--- a/.github/workflows/swift-code-coverage.yml
+++ b/.github/workflows/swift-code-coverage.yml
@@ -18,15 +18,14 @@ jobs:
       run: |
         sudo apt-get install -y libjemalloc-dev
 
-    - uses: khlopko/setup-swift@bfd61cbd14eeef55a27afc45138b61ced7174839
+    - uses: swift-actions/setup-swift@v2
 
     - name: Swift version
       run: swift --version
 
     - name: Run tests
       continue-on-error: true
-      run: |
-        [ -d Tests ] && swift test --parallel --enable-code-coverage
+      run: swift test --parallel --enable-code-coverage
 
     - name: Export code coverage
       run: |
