--- a/.github/workflows/swift-linux-build.yml
+++ b/.github/workflows/swift-linux-build.yml
@@ -1,4 +1,4 @@
-name: Swift Linux build
+name: Linux build
 
 on:
   workflow_dispatch:
@@ -14,17 +14,17 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        swift: ["5.7", "5.8"]
-
+#        swift: [ "5.10", "6.0" ]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: fwal/setup-swift@v1.23.0
+    - uses: swift-actions/setup-swift@v2
+      if: ${{ false }}
       with:
         swift-version: ${{ matrix.swift }}
 
-    - uses: actions/checkout@v3    
+    - uses: actions/checkout@v4
 
     - name: Ubuntu deps
       if: ${{ runner.os == 'Linux' }}
@@ -38,5 +38,7 @@ jobs:
       run: swift build
 
     - name: Run tests
-      run: |
-        [ -d Tests ] && swift test --parallel
+      run: swift test --parallel
+
+    - name: Run tests (release)
+      run: swift test -c release --parallel
